[package]
name = "raytracer"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
glam = "0.8.6"
rayon = "1.3.0"